# misty_speech_therapy

./: .gitignore  LICENSE  README.md  Research_Paper.md  package.xml  requirements.txt  setup.py  start_misty_therapy.sh
launch/: speech_therapy.launch.py
misty_speech_therapy/: conversation_manager.py  misty_wrapper.py  speech_processor.py
src/: package.xml  setup.py
